# APIkeyManager

./: .gitignore  .markdownlint.json  GEMINI.md  GITHUB_SETUP.md  IFLOW.md  README.md  README_CN.md  TESTING.md  build-release.ps1  commit-message.txt  index.html  package-lock.json  package.json  start-app.bat  start-app.ps1  start-debug.bat  start-dev.bat  start-release.bat  tailwind.config.js  test-api-keys.csv  test-debug.ps1  tmp_before.txt  vite.config.ts
.claude/: settings.local.json
docs/: APIKeyManager_需求文档.md  CODE_REVIEW_REPORT.md  FUNCTION_INDEX.md  README.md  RadialMenu_Implementation_Plan.md  TODO_LIST.md  TROUBLESHOOTING.md  UIdesignToken.md  frontend_design.md  frontend_fix.md  status.md  代码审查报告.md  函数索引文档.md  项目总结报告.md
public/: preview-i18n.js  preview.html
ref/: AddNewAPIkey.avif  BatchImport.avif  ChangeThemeAndLang.avif  DeleteKey.avif  RadialMenu.avif  SearchKeyWords.avif  SystemShortcut.avif  mp4_to_avif.py
src/: App.css  App.tsx  index.css  main.tsx
src-tauri/: .env  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/clipboard/: mod.rs
src-tauri/src/commands/: api_key_commands.rs  batch_import_commands.rs  clipboard_commands.rs  group_commands.rs  llm_commands.rs  mod.rs  security_commands.rs  shortcut_commands.rs  window_commands.rs
src-tauri/src/commands/tests/: api_key_commands_test.rs
src-tauri/src/database/: api_key.rs  batch_import.rs  error.rs  group.rs  mod.rs  settings.rs  usage_history.rs
src-tauri/src/llm/: mod.rs
src-tauri/src/security/: encryption.rs  mod.rs  password.rs
src/hooks/: index.ts  (+7 more)
(+72 files in other folders)
