[package]
name = "api-key-manager"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "api_key_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "api-key-manager"
path = "src/main.rs"

# Console window is prevented by windows_subsystem = "windows" in main.rs

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-opener = "2.0"
tauri-plugin-dialog = "2.4.0"
tauri-plugin-fs = "2.4.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "1.0"
argon2 = "0.5"
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.21"
arboard = "3.0"
reqwest = { version = "0.11", features = ["json"] }
regex = "1.0"
tauri-plugin-global-shortcut = "2.3.0"

# Windows API dependencies removed - using Tauri built-in methods

# SQLite configuration to use system libraries
[dependencies.libsqlite3-sys]
version = "0.27"
features = ["bundled"]
